Libraries/GTK/src/gtkextra/gtkplot.h

typedef struct _GtkPlot		GtkPlot;
typedef struct _GtkPlotAxis 	GtkPlotAxis;
typedef struct _GtkPlotText 	GtkPlotText;
typedef enum
{
  GTK_PLOT_SCALE_LINEAR	,
  GTK_PLOT_SCALE_LOG10
} GtkPlotScale;
void		gtk_plot_set_yrange		(GtkPlot *plot,
						 gdouble ymin, gdouble ymax);
void		gtk_plot_set_range		(GtkPlot *plot,
						 gdouble xmin, gdouble xmax,
						 gdouble ymin, gdouble ymax);
void		gtk_plot_autoscale		(GtkPlot *plot);
void		gtk_plot_get_xrange		(GtkPlot *plot,
						 gdouble *xmin, gdouble *xmax);
void		gtk_plot_get_yrange		(GtkPlot *plot,
						 gdouble *ymin, gdouble *ymax);
void 		gtk_plot_set_xscale		(GtkPlot *plot,
						 GtkPlotScale scale_type);
void 		gtk_plot_set_yscale		(GtkPlot *plot,
						 GtkPlotScale scale_type);
GtkPlotScale 	gtk_plot_get_xscale		(GtkPlot *plot);
GtkPlotScale 	gtk_plot_get_yscale		(GtkPlot *plot);
GtkPlotText *	gtk_plot_put_text		(GtkPlot *plot,
						 gdouble x, gdouble y,
						 const gchar *font,
             					 gint height,
             					 gint angle,
						 const GdkColor *foreground,
						 const GdkColor *background,
						 gboolean transparent,
						 GtkJustification justification,
                                                 const gchar *text);
void		gtk_plot_axis_set_visible	(GtkPlotAxis *axis,
                                                 gboolean visible);
gboolean	gtk_plot_axis_visible		(GtkPlotAxis *axis);
void		gtk_plot_axis_set_title		(GtkPlotAxis *axis,
						 const gchar *title);
void		gtk_plot_axis_show_title	(GtkPlotAxis *axis);
void		gtk_plot_axis_hide_title	(GtkPlotAxis *axis);
void		gtk_plot_axis_move_title	(GtkPlotAxis *axis,
						 gint angle,
						 gdouble x, gdouble y);
void		gtk_plot_axis_justify_title	(GtkPlotAxis *axis,
						 GtkJustification justification);
void		gtk_plot_axis_set_attributes 	(GtkPlotAxis *axis,
						 gfloat width,
						 const GdkColor *color);
void		gtk_plot_axis_get_attributes 	(GtkPlotAxis *axis,
						 gfloat *width,
						 GdkColor *color);
void		gtk_plot_axis_set_ticks		(GtkPlotAxis *axis,
						 gdouble major_step,
						 gint nminor);
void		gtk_plot_axis_set_major_ticks	(GtkPlotAxis *axis,
						 gdouble major_step);
void		gtk_plot_axis_set_minor_ticks	(GtkPlotAxis *axis,
				     gint nminor);